# rust-cmake

./: CMakeLists.txt  README.md  rust.cmake
rs/testlib/: Cargo.toml  build.rs
rs/testlib/src/: lib.rs
